<?xml version="1.0" encoding="utf-8"?>
<!--
// Pandora FMS - http://pandorafms.com
// ==================================================
// Copyright (c) 2005-2011 Artica Soluciones Tecnologicas
// Please see http://pandorafms.org for full contribution list

// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public License
// as published by the Free Software Foundation; version 2

// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details. 
-->
<resources>

    <!-- CONST -->
    <string name="pandroid_event_viewer_str">Pandroid Event Viewer</string>
    <string name="const_string_preferences">PANDROID_EVENT_VIEWER_PREFERENCES</string>
    <string name="item_tab_main_text">Filter</string>
    <string name="item_tab_event_list_text">Event list</string>
    <string name="main_text">main text (value)</string>
    <string name="list_text">list (value)</string>
    <string name="system_str">System</string>
    <string name="empty_str">- Empty -</string>
    <string name="all_str">All</string>
    <string name="tags_label_str">Tags</string>
    <string name="comments_label_str">Comments</string>
    <string name="group_label_str">Group</string>
    <string name="agent_label_str">Agent name</string>
    <string name="type_label_str">Type</string>
    <string name="severity_label_str">Severity</string>
    <string name="date_label_str">Date</string>
    <string name="number_events_label_str">Number of events</string>
    <string name="reset_button_str">Reset</string>
    <string name="search_button_str">Search</string>
    <string name="loading_label_str">Loading</string>
    <string name="options_label_str">Options</string>
    <string name="refresh_label_str">Refresh</string>
    <string name="about_label_str">About</string>
    <string name="url_label_str">URL</string>
    <string name="user_label_str">User</string>
    <string name="password_label_str">Password</string>
    <string name="api_password_label_str">API Password</string>
    <string name="update_button_str">Update</string>
    <string name="option_title_str">Options</string>
    <string name="load_more_events_button_str">Load more events</string>
    <string name="empty_label_str">Empty list events</string>
    <string name="refresh_time_label_str">Refresh time</string>
    <string name="set_as_filter_watcher_button_str">Default</string>
    <string name="validate_event_button_str">Validate Event</string>
    <string name="config_update_succesful_str">Update configuration successful.</string>
    <string name="config_update_fail_str">Update configuration is failed.</string>
    <string name="please_set_preferences_str">Please set the preferences as the API URL, user and password for your Pandora FMS.</string>
    <string name="preferences_set_demo_pandora_str">Pandroid Event Viewer is connecting with PandoraFMS public demo, please change the preferences for your Pandora FMS.</string>
    <string name="filter_update_succesful_str">Update filter successful.</string>
    <string name="filter_update_fail_str">Update filter is failed.</string>
    <string name="notification_criticity_0_str">There are %s events and all in Maintenance state.</string>
    <string name="notification_criticity_1_str">There are %s events and some are in Informational state.</string>
    <string name="notification_criticity_2_str">There are %s events and some are in Normal state.</string>
    <string name="notification_criticity_3_str">There are %s events and some are in Warning state.</string>
    <string name="notification_criticity_4_str">There are %s events and some are in Critical state.</string>
    <string name="loading_events_criticity_0_str">Loading events (all in Maintenance state).</string>
    <string name="loading_events_criticity_1_str">Loading events (some are in Informational state).</string>
    <string name="loading_events_criticity_2_str">Loading events (some are in Normal state).</string>
    <string name="loading_events_criticity_3_str">Loading events (some are in Warning state).</string>
    <string name="loading_events_criticity_4_str">Loading events (some are in Critical state).</string>
    <string name="successful_validate_event_str">The event validation is successful.</string>
    <string name="fail_validate_event_str">The event validation is failed.</string>
    <string name="status_label_str">Status</string>
    <string name="event_search_label_str">Event search</string>
    <string name="max_time_old_event_str">Oldest event</string>
    <string name="licensed_under_gpl_str">Licensed under GPL v2</string>
    <string name="develop_team_str">Developer: Miguel de Dios</string>
    <string name="alert_recovered_str">Alert recovered</string>
    <string name="alert_manual_validation_str">Alert manually validated</string>
    <string name="going_up_warning_str">Going from critical to warning</string>
    <string name="going_down_critical_str">Going to critical status</string>
    <string name="going_up_normal_str">Going to normal status</string>
    <string name="going_down_warning_str">Going down to warning</string>
    <string name="alert_fired_str">Alert fired</string>
    <string name="recon_host_detected_str">Recon server detected a new host</string>
    <string name="new_agent_str">New agent created</string>
    <string name="unknown_str">Unknown type:</string>
    <string name="unknown_event_str">Unknown event</string>
    <string name="validate_event_label_str">Event validated</string>
    <string name="pandroid_event_viewer_description_str">Realtime event viewer for Pandora FMS.</string>
    <string name="pandroid_info_txt"><b>Welcome to Pandora FMS Event viewer for Android</b></string>
    <string name="pandroid_info_long_txt"><p>This app is used for to see confortable and standaralone the events status from the monitoring server of Pandora FMS. From this app you can see in realtime the events and validate or filter.</p><p>The configuration as default connecting with public demo of Pandora FMS in firefly.artica.es. Please change the configuration for to use your Pandora FMS server.</p></string>
    <string name="check_connection">Connection status</string>
    <string name="connection">Connection</string>
    <string name="notification">Notification</string>
    <string name="vibration">Vibration</string>
    <string name="led_flash">Led flashes</string>
    <string name="sound">Sound</string>
    <string name="select_sound">Select notification sound</string>
    <string name="silence">Silence</string>
    <string name="tag_label_str">Tag</string>
    <string name="advanced_options">Show advanced search options</string>
    <string name="empty">- Empty -</string>
    <string name="img_severity">Severity image</string>
    <string name="img_group">Group image</string>
    <string name="img_type">Type image</string>
    <string name="artica_copyright">Copyright (©) 2011 Artica</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="pandorafms_logo_description">PandoraFMS\'s logo</string>
    <string name="description">Description</string>
    <string name="incident_close_button">Close incident</string>
    <string name="incidents_label_str">Incidents</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="create">Create</string>
    <string name="source">Source</string>
    <string name="incident_created">Incident created</string>
    <string name="title_empty">Sorry, you must provide a title</string>
    <string name="creating_incident">Creating new incident…</string>
    <string name="create_incident">Create incident</string>
    <string name="create_incident_group_error">There was an error creating the incident: unrecognized event group. Please, contact administrator.</string>
    <string name="url_not_valid">Incorrect url. Please, insert a valid url</string>
    <string name="certificate_not_valid">This server has a certificate not signed by a CA, do you trust it?</string>
    <string name="options_not_saved">Options not saved.</string>
    <string name="notification_error_parsing">There was an error retrieving data from server.</string>
    <string name="save_profile_button_str">Save profile</string>
    <string name="profile_label_str">Profile</string>
    <string name="profile_name">Insert the profile\'s name</string>
    <string name="profile_saved">Profile saved</string>
    <string name="profile_already_exists">A profile with that name already exists.</string>
    <string name="profile_name_character_not_allowed">The | character is not allowed.</string>
    <string name="profile_delete">Delete profile</string>
    <string name="connection_problem">There was a problem. Check your connection.</string>
    <string name="connection_settings_problem">The operation can not be performed until you configure a correct connection.</string>
    <string name="unknown_version">Unknown version</string>
    <string name="enable_background_service">Check events in background</string>

</resources>