<?xml version="1.0" encoding="utf-8"?>
<!--
// Pandora FMS - http://pandorafms.com
// ==================================================
// Copyright (c) 2005-2011 Artica Soluciones Tecnologicas
// Please see http://pandorafms.org for full contribution list

// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public License
// as published by the Free Software Foundation; version 2

// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details. 
-->
<TableLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#FFFFFF"
>
	<TableRow>
		<TextView
			android:textColor="#000"
			android:text="@string/severity_label_str"
			android:paddingRight="5dip"
		/>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<ImageView
				android:layout_weight="0"
				android:id="@+id/img_severity"
				android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_gravity="center"
			/>
			<TextView
				android:id="@+id/severity_text"
				android:textColor="#000"
				android:text=""
				android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
			/>
		</LinearLayout>
	</TableRow>
	<TableRow>
		<TextView
			android:textColor="#000"
			android:text="@string/type_label_str"
			android:paddingRight="5dip"
		/>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<ImageView
				android:layout_weight="0"
				android:id="@+id/img_type"
				android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_gravity="center"
			/>
			<TextView
				android:id="@+id/type_text"
				android:textColor="#000"
				android:text=""
				android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
			/>
		</LinearLayout>
	</TableRow>
	<TableRow
		android:id="@+id/row_agent"
		android:visibility="gone"
	>
		<TextView
			android:textColor="#000"
			android:text="@string/agent_label_str"
			android:paddingRight="5dip"
		/>
		<TextView
			android:id="@+id/agent_text"
			android:textColor="#000"
			android:text=""
		/>
	</TableRow>
	<TableRow>
		<TextView
			android:textColor="#000"
			android:text="@string/group_label_str"
			android:paddingRight="5dip"
		/>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<ImageView
				android:layout_weight="0"
				android:id="@+id/img_group"
				android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_gravity="center"
			/>
			<TextView
				android:layout_weight="1"
				android:id="@+id/group_text"
				android:textColor="#000"
				android:text="@string/all_str"
				android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
			/>
		</LinearLayout>
	</TableRow>
	<!--<TableRow>
		<TextView
			android:textColor="#000"
			android:text="Count"
			android:paddingRight="5dip"
		/>
		<TextView
			android:textColor="#000"
			android:text="1" 
		/>
	</TableRow>-->
	<TableRow>
		<TextView
			android:textColor="#000"
			android:text="@string/comments_label_str"
			android:paddingRight="5dip"
		/>
		<TextView
			android:id="@+id/comments_text"
			android:textColor="#000"
			android:text="- Empty -"
		/>
	</TableRow>
	<TableRow>
		<TextView
			android:textColor="#000"
			android:text="@string/tags_label_str"
			android:paddingRight="5dip"
		/>
		<TextView
			android:id="@+id/tags_text"
			android:textColor="#000"
			android:text="- Empty -" 
		/>
	</TableRow>
	<TableRow
		android:gravity="right"
	> 
		<Button
			android:id="@+id/validate_button_extended"
			android:text="@string/validate_event_button_str"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		/>
	</TableRow>
</TableLayout>