<?xml version="1.0" encoding="utf-8"?>
<!--
// Pandora FMS - http://pandorafms.com
// ==================================================
// Copyright (c) 2005-2011 Artica Soluciones Tecnologicas
// Please see http://pandorafms.org for full contribution list

// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public License
// as published by the Free Software Foundation; version 2

// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details. 
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/options_button_menu_options"
        android:icon="@drawable/config"
        android:title="@string/options_label_str"/>
    <item
        android:id="@+id/refresh_button_menu_options"
        android:icon="@drawable/refresh"
        android:title="@string/refresh_label_str"/>
    <item
        android:id="@+id/about_button_menu_options"
        android:icon="@drawable/about"
        android:title="@string/about_label_str"/>

</menu>