<?xml version="1.0" encoding="utf-8"?>
<!--
// Pandora FMS - http://pandorafms.com
// ==================================================
// Copyright (c) 2005-2011 Artica Soluciones Tecnologicas
// Please see http://pandorafms.org for full contribution list

// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU Lesser General Public License
// as published by the Free Software Foundation; version 2

// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU General Public License for more details. 
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#242424"
>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical" >

            <TextView
                style="@style/options_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/connection"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/url_label_str"
                    style="@style/options_label" />

                <EditText
                    android:id="@+id/url"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEditText"
                    android:singleLine="true"
                    style="@style/options_edittext"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/user_label_str"
                    style="@style/options_label"
                 />

                <EditText
                    android:id="@+id/user"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    style="@style/options_edittext" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/password_label_str"
                    style="@style/options_label"
                />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    style="@style/options_edittext" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="5dip"
                    android:text="@string/api_password_label_str"
                    style="@style/options_label"
                />

                <EditText
                    android:id="@+id/api_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    style="@style/options_edittext"
                    />
                
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:text="@string/refresh_time_label_str"
                    style="@style/options_label"
                />

                <Spinner
                    android:id="@+id/refresh_combo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                
				<TextView
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:paddingLeft="2dp"
			          android:text="@string/timeout_connections_label_str"
			          style="@style/options_label"
			     />
				<LinearLayout
				    android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
				>
					<EditText
						android:id="@+id/timeout_connections"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:ems="3"
						android:inputType="number"
						android:singleLine="true"
						android:gravity="right"
						style="@style/options_edittext" />
					<TextView
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"
			          android:text="@string/seconds_label_str"
			          style="@style/options_label"
			          android:paddingLeft="5dp"
			          android:layout_gravity="center_vertical"
			     	  />
				</LinearLayout>
				<LinearLayout
				    android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
				>
					<TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left|center_vertical"
                            android:paddingLeft="2dp"
                            android:text="@string/enable_background_service"
                            style="@style/options_label"
                            android:layout_weight="1"
                         />

                        <CheckBox
                            android:id="@+id/background_service_on"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0" />
				</LinearLayout>
                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:stretchColumns="0,1" >

                    <TableRow android:layout_marginTop="10dp" >

                        <TextView
                            android:id="@+id/check_connection_status"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:drawableBottom="@drawable/help"
                            android:text="@string/check_connection"
                        />
                    </TableRow>

                </TableLayout>
            </LinearLayout>
            
            
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            

            <TextView
                style="@style/options_header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:text="@string/notification" />
            
              <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="20dp"
	            android:orientation="vertical"
	            android:padding="10dp">
            
            <LinearLayout
				    android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
				>
                <TextView
                        android:layout_gravity="center_vertical"
                        android:text="@string/vibration"
                        style="@style/options_label"
                        android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                    <CheckBox
                        android:id="@+id/vibration_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0" />
            </LinearLayout>
            <LinearLayout
				    android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
				>
                    <TextView
                         android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/led_flash"
                        style="@style/options_label"
                        android:layout_weight="1" />

                    <CheckBox
                        android:id="@+id/led_flash_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0" />
            </LinearLayout>
            <LinearLayout
				    android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
				>
                    <TextView
                        android:id="@+id/textView1"
                          android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/sound"
                        style="@style/options_label"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/sound_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0" />
            </LinearLayout>

            
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:background="#ffffff" />

        <Button
            android:id="@+id/update_options"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/update_button_str" />
    </LinearLayout>
    </LinearLayout>

</ScrollView>